http://bugzilla.zimbra.com/show_bug.cgi?id=13697 bug: 13697 - Username label misplaced on IE6 in web client - Also fixes username/quotabar donkey w/ FF
Copied from Perforce
 Change: 42913

--- a/WebRoot/skins/_base/base/base.css
+++ b/WebRoot/skins/_base/base/base.css
@@ -68,29 +68,11 @@ body						{	@ChromeBg@	}
 }
 
 
-#skin_td_quota							{	
-	text-align:right;		
-#IFDEF MSIE
-	vertical-align:top;
-#ENDIF
-}
+#skin_td_quota							{	vertical-align:top;		}
 #skin_border_quota						{	@SkinBorderQuota@		}
-#skin_container_quota					{	
-	height:30;		margin: -2 5 0 10;  
-}
+#skin_container_username,
+#skin_container_quota					{	height:20px;			}
 
-#skin_container_username {
-#IFDEF GECKO
-	padding-top:6px;
-#ENDIF
-#IFDEF SAFARI
-	padding-top:4px;
-#ENDIF
-#IFDEF MSIE
-	position:relative;
-	top:-4px;
-#ENDIF
-}
 
 /* search builder */
 
